# SimpleGoX-ESP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
.claude/: CLAUDE.md  settings.json
components/mjson/: CMakeLists.txt
docs/: ANALYSIS.md  FIRST-FLASH.md  FLASHING.md  HOMESERVER-SETUP.md  README.md  WIRING.md
gadgets/light-switch/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  gpio_control.c  gpio_control.h  idf_component.yml  main.c  matrix_client.c  matrix_client.h  matrix_http.c  matrix_http.h  matrix_json.c  matrix_json.h  nvs_storage.c  nvs_storage.h
main/crypto/: crypto_utils.c  crypto_utils.h  matrix_e2ee.c  matrix_e2ee.h  megolm_message.c  megolm_message.h  megolm_session.c  megolm_session.h  olm_account.c  olm_account.h  olm_message.c  olm_message.h  olm_session.c  olm_session.h
tools/: megolm_outbound_verify.py  megolm_ratchet_test.py  olm_decrypt_real.py  olm_test_vectors.py
