idf_component_register(SRCS
                            "main.c"
                            "matrix_client.c"
                            "matrix_http.c"
                            "matrix_json.c"
                            "gpio_control.c"
                            "nvs_storage.c"
                            "crypto/crypto_utils.c"
                            "crypto/olm_message.c"
                            "crypto/megolm_message.c"
                            "crypto/olm_account.c"
                            "crypto/olm_session.c"
                            "crypto/megolm_session.c"
                            "crypto/matrix_e2ee.c"
                       INCLUDE_DIRS
                            "."
                            "crypto"
                       REQUIRES
                            mjson
                            esp-tls
                            esp_http_client
                            esp_event
                            esp_netif
                            esp_wifi
                            esp_timer
                            nvs_flash
                            driver
                            mbedtls)
